Fixed product image + product thumbnails so they don't squish if too tall

--- a/assets/scss/components/stencil/productView/_productView.scss
+++ b/assets/scss/components/stencil/productView/_productView.scss
@@ -51,7 +51,8 @@
     img {
         @include lazy-loaded-img;
         max-height: 100%;
-        width: 100%;
+        max-width: 100%;
+        width: 80%;
     }
 
     @include lazy-loaded-padding('product_size');
@@ -81,7 +82,8 @@
         @include lazy-loaded-img;
         max-height: 50px;
         max-width: 50px;
-        width: 100%;
+        //width: 100%;
+        width: auto;
     }
 }
 
